--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -32,6 +32,18 @@ h6 {
   font-family: 'Roboto', sans-serif;
 }
 
+.buttonAny {
+  background: #1bbd36;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+.buttonAny:hover {
+  background: #2ae149;
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
