Profile & Edit Profile Screen Updated

--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -34,6 +34,29 @@ h6 {
   font-family: 'Roboto', sans-serif;
 }
 
+.tech {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 4px;
+  transition: 0.5s;
+  line-height: 1;
+  margin: 10px;
+  color: black;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+  border: 1px solid black;
+}
+.tech:hover {
+  background: grey;
+  color: #fff;
+  text-decoration: none;
+  border: 1px solid grey;
+}
+
 .btn-get-started {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
