--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,14 @@
-*{
+* {
   margin: 0px;
+}
+body {
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.7) 70%,
+      rgb(255, 255, 255)
+    ),
+    url(./components/dots_hero_pattern@2x-owhl3jgncb.png);
+  background-repeat: repeat-x;
+  background-size: 800px;
 }
 main {
   min-height: 95vh;
